# finetune-e5-financebench

./: .gitattributes  README.md  finetune-e5.py.txt  main.py  pyproject.toml
checkpoints/model/eval/: Information-Retrieval_evaluation_results.csv
test_model/: README.md  config.json  config_sentence_transformers.json  model.safetensors  tokenizer.json
test_model/eval/: Information-Retrieval_evaluation_results.csv
